# shared/src/commonMain/kotlin/com/lilac/kas/response/UserDetailResponse.kt
@@ -1,11 +1,11 @@
 package com.lilac.kas.response
 
-import com.lilac.kas.dto.TokenPairDto
+import com.lilac.kas.dto.UserDetailDto
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class TokenPairResponse(
-    val data: TokenPairDto,
+data class UserDetailResponse(
+    val data: UserDetailDto,
     val success: Boolean,
     val message: String?
 )
