# shared/src/commonMain/kotlin/com/lilac/kas/response/UserPublicDetailResponse.kt
@@ -1,11 +1,11 @@
 package com.lilac.kas.response
 
-import com.lilac.kas.dto.TokenPairDto
+import com.lilac.kas.dto.UserPublicDetailDto
 import kotlinx.serialization.Serializable
 
 @Serializable
-data class TokenPairResponse(
-    val data: TokenPairDto,
+data class UserPublicDetailResponse(
+    val data: UserPublicDetailDto,
     val success: Boolean,
     val message: String?
 )
